ui/controls/cascading-list.reel/cascading-list-item.reel/_cascading-list-item.css
.CascadingListItem {
    display: flex;
    flex-direction: column;
    position: relative;
    font-family: 'lato';
    border-right: 1px solid rgba(255,255,255,.15);
    /* min-width: 16rem; */
    /* flex-shrink: 0; */
}

.CascadingListItem-title {
    flex-shrink: 0;
    font-size: 1em;
    line-height: 3em;
    height:      3em;
    padding: 0 1em;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    background-color: #0F1213;
    text-shadow: 0 1px rgba(0,0,0,.2);
    font-weight: 400;
}

.CascadingListItem-content {
    position: relative;
    display: flex;
    flex-grow: 1;
    flex-direction: column;

    & > * {
        position: relative;
        flex: 1;
        display: flex;
        flex-direction: column;
    }
}


/* sets up scrolling only on inspectors */
/* .CascadingListItem-content.Inspector-scroll {
    overflow: hidden;
} */

